# OCR-Python-Notebooks

./: README.md  cn-ocr-demo.py  easy-ocr-demo.py  pp-ocr-demo.py  pyproject.toml  rapid-ocr-demo.py
cn-ocr-demo/: cn-ocr-demo.py  pyproject.toml
easy-ocr-demo/: easy-ocr-demo.py  pyproject.toml
pp-ocr-demo/: pp-ocr-demo.py  pyproject.toml
rapid-ocr-demo/: pyproject.toml  rapid-ocr-demo.py
surya-ocr-demo/: pyproject.toml  surya-ocr-demo.py
