[project]
name = "OCR-Marimo-Notebooks"
version = "0.1.0"
description = "Marimo notebooks that showcase how to use and run some of the OCR tools locally using lightweight CPU-based models."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL V2"}
authors = [
    {name = "ahmed-0011"},
]
dependencies = [
    "pyperclip>=1.9.0",
    "marimo[recommended]>=0.14.11,<1.0",
    "matplotlib>=3.10.3",
    "onnxruntime>=1.22.1",
    "opencv-python~=4.12.0.88",
    "paddleocr~=3.1.0",
    "paddlepaddle~=3.1.0",
    "paddlex~=3.1.3",
    "rapidocr~=3.2.0",
    "easyocr~=1.7.2",
    "cnocr[ort-cpu]~=2.3.2.1",
    "setuptools",
]

[tool.marimo.runtime]
auto_instantiate = true
on_cell_change = "autorun"
