[project]
name = "rapid-ocr-demo"
version = "0.1.0"
description = "Marimo notebook demo for RapidOCR"
requires-python = ">=3.10"
authors = [
    {name = "ahmed-0011"},
]
dependencies = [
    "pyperclip>=1.9.0",
    "marimo[recommended]>=0.14.11,<1.0",
    "opencv-python~=4.12.0.88",
    "setuptools",
    "onnxruntime>=1.22.1",
    "rapidocr~=3.2.0",
]

[tool.marimo.package_management]
manager = "uv"

[tool.marimo.runtime]
auto_instantiate = true
on_cell_change = "autorun"